--- a/quickguide_market_models.ipynb
+++ b/quickguide_market_models.ipynb
@@ -92,6 +92,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5c7f20e4-30d6-4614-9905-3ee0b36c07a9",
+   "metadata": {
+    "id": "9b81ab00-c1ae-43a1-b4dd-60f37beb2031"
+   },
+   "outputs": [],
+   "source": [
+    "owner = None\n",
+    "repo = None\n",
+    "folder_path = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0e4864b5-ce27-4dc0-9005-e9bf9aa5419f",
    "metadata": {
     "id": "0e4864b5-ce27-4dc0-9005-e9bf9aa5419f"
@@ -113,135 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "31334444-18bc-4606-8d8f-df8d3e86f13a",
    "metadata": {
     "id": "31334444-18bc-4606-8d8f-df8d3e86f13a",
     "outputId": "5f04a897-62cc-473d-a92f-0a6241db8e93"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "operating demo\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\taest\\Documents\\github\\research_market_tv\\market_research\\scraper\\models\\visualizer\\data_cleaner.py:29: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  self.df = self.df.groupby('series').apply(lambda x: x.fillna(method='ffill').fillna(method='bfill')).reset_index(drop=True)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>model</th>\n",
-       "      <th>description</th>\n",
-       "      <th>price</th>\n",
-       "      <th>price_original</th>\n",
-       "      <th>price_gap</th>\n",
-       "      <th>year</th>\n",
-       "      <th>series</th>\n",
-       "      <th>size</th>\n",
-       "      <th>grade</th>\n",
-       "      <th>text0</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Twin Picture</th>\n",
-       "      <th>X-Anti Reflection</th>\n",
-       "      <th>X-Wide Angle</th>\n",
-       "      <th>DSEE/DSEE-HX</th>\n",
-       "      <th>Voice Remote Control (supply) included Rechargeable Battery</th>\n",
-       "      <th>USB Type-C Cable</th>\n",
-       "      <th>High Peak Luminance</th>\n",
-       "      <th>Lithium Battery</th>\n",
-       "      <th>DIMENSION OF TV WITH STAND (NARROW POSITION) (W x H x D)</th>\n",
-       "      <th>DIMENSION OF TV WITH BUNDLED CAMERA (WITHOUT STAND) (W X H X D)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>k-65s30</td>\n",
-       "      <td>BRAVIA 3 65” class LED 4K HDR Google TV (2024)</td>\n",
-       "      <td>749.99</td>\n",
-       "      <td>999.99</td>\n",
-       "      <td>250</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>s30</td>\n",
-       "      <td>65</td>\n",
-       "      <td>k</td>\n",
-       "      <td>real-world colors in every shade and hue</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 291 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     model                                     description   price  \\\n",
-       "0  k-65s30  BRAVIA 3 65” class LED 4K HDR Google TV (2024)  749.99   \n",
-       "\n",
-       "   price_original  price_gap  year series  size grade  \\\n",
-       "0          999.99        250  2024    s30    65     k   \n",
-       "\n",
-       "                                      text0  ... Twin Picture  \\\n",
-       "0  real-world colors in every shade and hue  ...         None   \n",
-       "\n",
-       "  X-Anti Reflection X-Wide Angle DSEE/DSEE-HX  \\\n",
-       "0              None         None          NaN   \n",
-       "\n",
-       "  Voice Remote Control (supply) included Rechargeable Battery  \\\n",
-       "0                                               None            \n",
-       "\n",
-       "  USB Type-C Cable High Peak Luminance Lithium Battery  \\\n",
-       "0             None                None            None   \n",
-       "\n",
-       "  DIMENSION OF TV WITH STAND (NARROW POSITION) (W x H x D)  \\\n",
-       "0                                               None         \n",
-       "\n",
-       "  DIMENSION OF TV WITH BUNDLED CAMERA (WITHOUT STAND) (W X H X D)  \n",
-       "0                                               None               \n",
-       "\n",
-       "[1 rows x 291 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "scraper_s = Specscraper_s()\n",
     "df = scraper_s.fetch_model_data()\n",
@@ -259,9 +151,8 @@
    "source": [
     "try:\n",
     "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"json/s_scrape_model_data_{today}\" )\n",
-    "except:\n",
-    "    pass\n",
-    "    from datetime import datetime"
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -293,9 +184,8 @@
    "source": [
     "try:\n",
     "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"json/s_g_scrape_model_data_{today}\" )\n",
-    "except:\n",
-    "    pass\n",
-    "    from datetime import datetime"
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -310,128 +200,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "26151fab-8ecb-4cc9-9529-ce81e09a782e",
    "metadata": {
     "id": "26151fab-8ecb-4cc9-9529-ce81e09a782e",
     "outputId": "dd5cc5a2-12df-4837-ef46-6b2dd2b944a1"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "operating demo\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\taest\\Documents\\github\\research_market_tv\\market_research\\scraper\\models\\visualizer\\data_cleaner.py:29: FutureWarning:\n",
-      "\n",
-      "DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>model</th>\n",
-       "      <th>price</th>\n",
-       "      <th>price_original</th>\n",
-       "      <th>price_gap</th>\n",
-       "      <th>description</th>\n",
-       "      <th>grade</th>\n",
-       "      <th>year</th>\n",
-       "      <th>size</th>\n",
-       "      <th>Display Resolution</th>\n",
-       "      <th>Display Type</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Headphone Output</th>\n",
-       "      <th>Diagonal Size</th>\n",
-       "      <th>Stand Width (Adjustable)</th>\n",
-       "      <th>FreeSync Premium™</th>\n",
-       "      <th>Brightness Booster</th>\n",
-       "      <th>Latest HDMI (4K @ 120Hz)</th>\n",
-       "      <th>Dolby Vision IQ</th>\n",
-       "      <th>Backlight Dimming Technology</th>\n",
-       "      <th>series</th>\n",
-       "      <th>price_origisnal</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>OLED77C3PUA</td>\n",
-       "      <td>3499.99</td>\n",
-       "      <td>3499.99</td>\n",
-       "      <td>0</td>\n",
-       "      <td></td>\n",
-       "      <td>oled</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>77</td>\n",
-       "      <td>4K Ultra HD (3,840 x 2,160)</td>\n",
-       "      <td>4K OLED</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>c3</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 131 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         model    price  price_original  price_gap description grade  year  \\\n",
-       "0  OLED77C3PUA  3499.99         3499.99          0              oled  2023   \n",
-       "\n",
-       "   size           Display Resolution Display Type  ... Headphone Output  \\\n",
-       "0    77  4K Ultra HD (3,840 x 2,160)      4K OLED  ...             None   \n",
-       "\n",
-       "  Diagonal Size Stand Width (Adjustable) FreeSync Premium™ Brightness Booster  \\\n",
-       "0          None                     None              None               None   \n",
-       "\n",
-       "  Latest HDMI (4K @ 120Hz) Dolby Vision IQ Backlight Dimming Technology  \\\n",
-       "0                     None            None                         None   \n",
-       "\n",
-       "  series price_origisnal  \n",
-       "0     c3             NaN  \n",
-       "\n",
-       "[1 rows x 131 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "scraper_l = Specscraper_l()\n",
     "df = scraper_l.fetch_model_data()\n",
@@ -448,9 +223,9 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"l_scrape_model_data_{today}\" )\n",
-    "except:\n",
-    "    pass"
+    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"json/l_scrape_model_data_{today}\" )\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -481,9 +256,9 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"l_g_scrape_model_data_{today}\" )\n",
-    "except:\n",
-    "    pass"
+    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"json/l_g_scrape_model_data_{today}\" )\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -498,129 +273,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7e08d9a5-ddaf-4504-aaf6-0590b095cbd0",
    "metadata": {
     "id": "7e08d9a5-ddaf-4504-aaf6-0590b095cbd0",
     "outputId": "e677f826-6377-4055-b2f0-725254991cd8",
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "operating demo\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\taest\\Documents\\github\\research_market_tv\\market_research\\scraper\\models\\visualizer\\data_cleaner.py:29: FutureWarning:\n",
-      "\n",
-      "DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>model</th>\n",
-       "      <th>description</th>\n",
-       "      <th>price</th>\n",
-       "      <th>price_original</th>\n",
-       "      <th>price_gap</th>\n",
-       "      <th>grade</th>\n",
-       "      <th>size</th>\n",
-       "      <th>year</th>\n",
-       "      <th>series</th>\n",
-       "      <th>display type</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Wired TV On - Samsung WOL</th>\n",
-       "      <th>Cloud Service</th>\n",
-       "      <th>PC on TV</th>\n",
-       "      <th>Media Bay Space (WxHxD)</th>\n",
-       "      <th>Batteries (for Remote Control)</th>\n",
-       "      <th>Quantum Matrix Pro with mini LEDs</th>\n",
-       "      <th>Apps Platform</th>\n",
-       "      <th>Remote Control Battery</th>\n",
-       "      <th>HDR OLED</th>\n",
-       "      <th>Set Weight (lb)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>QN55Q80CAFXZA</td>\n",
-       "      <td>55\" Class QLED 4K Q80C</td>\n",
-       "      <td>899.99</td>\n",
-       "      <td>1199.99</td>\n",
-       "      <td>300</td>\n",
-       "      <td>qn</td>\n",
-       "      <td>55</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>q80c</td>\n",
-       "      <td>None</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 303 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           model             description   price  price_original  price_gap  \\\n",
-       "0  QN55Q80CAFXZA  55\" Class QLED 4K Q80C  899.99         1199.99        300   \n",
-       "\n",
-       "  grade  size  year series display type  ... Wired TV On - Samsung WOL  \\\n",
-       "0    qn    55  2023   q80c         None  ...                      None   \n",
-       "\n",
-       "  Cloud Service PC on TV Media Bay Space (WxHxD)  \\\n",
-       "0          None     None                    None   \n",
-       "\n",
-       "  Batteries (for Remote Control) Quantum Matrix Pro with mini LEDs  \\\n",
-       "0                           None                              None   \n",
-       "\n",
-       "  Apps Platform Remote Control Battery HDR OLED Set Weight (lb)  \n",
-       "0          None                   None     None             NaN  \n",
-       "\n",
-       "[1 rows x 303 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "scraper_se = Specscraper_se()\n",
     "df = scraper_se.fetch_model_data()\n",
@@ -637,9 +297,9 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"se_scrape_model_data_{today}\" )\n",
-    "except:\n",
-    "    pass"
+    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"json/se_scrape_model_data_{today}\" )\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -670,9 +330,9 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"se_g_scrape_model_data_{today}\" )\n",
-    "except:\n",
-    "    pass"
+    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"json/se_g_scrape_model_data_{today}\" )\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -709,9 +369,9 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"p_scrape_model_data_{today}\" )\n",
-    "except:\n",
-    "    pass"
+    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"json/p_scrape_model_data_{today}\" )\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -742,9 +402,9 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"t_scrape_model_data_{today}\" )\n",
-    "except:\n",
-    "    pass"
+    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"json/t_scrape_model_data_{today}\" )\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
@@ -805,27 +465,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26b40348-d461-4b52-9804-faabea09a9a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "owner = None\n",
-    "repo = None\n",
-    "folder_path = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "0bae8158-d642-4bd1-bba9-bdad5a50d508",
    "metadata": {},
    "outputs": [],
    "source": [
     "files_dict = GitMgt.get_github_files_as_dict(owner, repo, folder_path)\n",
     "try:\n",
-    "    GitMgt.upload_json_to_github(files_dict,  git_token, git_repo, file_name=f\"stream_data_list\" )\n",
-    "except:\n",
-    "    pass"
+    "    GitMgt.upload_json_to_github(files_dict,  git_token, git_repo, file_name=f\"json/stream_data_list\" )\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   },
   {
