--- a/quickguide_updater.ipynb
+++ b/quickguide_updater.ipynb
@@ -138,7 +138,8 @@
     "        scraper = cls_scraper(verbose=True)\n",
     "        df = scraper.fetch_model_data()\n",
     "        GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"json/{file_name}_{today}\" )\n",
-    "    except:\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
     "        pass"
    ]
   },
@@ -159,8 +160,8 @@
     "    data_dict = rtings.get_data(urls_dict)\n",
     "    GitMgt.upload_json_to_github(data_dict.get(\"measurement\"),  git_token, git_repo, file_name=f\"json/rtings_measurement_data_{today}\" )\n",
     "    GitMgt.upload_json_to_github(data_dict.get(\"scores\"),  git_token, git_repo, file_name=f\"json/rtings_scores_data_{today}\" )\n",
-    "except:\n",
-    "    pass"
+    "    except Exception as e:\n",
+    "        print(e)"
    ]
   },
   {
@@ -196,9 +197,9 @@
    "source": [
     "files_dict = GitMgt.get_github_files_as_dict(owner, repo, folder_path)\n",
     "try:\n",
-    "    GitMgt.upload_json_to_github(files_dict,  git_token, git_repo, file_name=f\"stream_data_list\" )\n",
-    "except:\n",
-    "    pass"
+    "    GitMgt.upload_json_to_github(files_dict,  git_token, git_repo, file_name=f\"json/stream_data_list\" )\n",
+    "except Exception as e:\n",
+    "    print(e)"
    ]
   }
  ],
