--- a/quickguide_market_erp.ipynb
+++ b/quickguide_market_erp.ipynb
@@ -1,136 +1,136 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "id": "1f063cfb",
-      "metadata": {
-        "id": "1f063cfb"
-      },
-      "source": [
-        "QuickGuide for marketmodels\n",
-        "\n",
-        "[프로젝트 페이지: Research-on-the-TV-market](https://github.com/xikest/research-market-tv)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "30216803",
-      "metadata": {
-        "id": "30216803"
-      },
-      "source": [
-        "# Env setting: Install Colab selenium & crome driver"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "a25efe6b-4cbe-49d6-83be-f55507d47a90",
-      "metadata": {
-        "id": "a25efe6b-4cbe-49d6-83be-f55507d47a90"
-      },
-      "outputs": [],
-      "source": [
-        "!pip install -U openpyxl tqdm --q\n",
-        "!pip install -U requests selenium beautifulsoup4 --q\n",
-        "!pip install -U matplotlib seaborn --q\n",
-        "!pip install -U xik_tools mkt-retv --q"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "6e1cbb67",
-      "metadata": {
-        "id": "6e1cbb67"
-      },
-      "source": [
-        "# Import Package"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "8e611f88",
-      "metadata": {
-        "id": "8e611f88"
-      },
-      "outputs": [],
-      "source": [
-        "from market_research.scraper import Erpsearcher\n",
-        "from tools.file import GitMgt\n",
-        "from datetime import datetime"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "8e37db89-b7bf-4c61-8e74-6d5aa412001a",
-      "metadata": {
-        "id": "8e37db89-b7bf-4c61-8e74-6d5aa412001a"
-      },
-      "source": [
-        "# 실행"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "03af03c9-3a93-4c18-a45c-889fd86e98cc",
-      "metadata": {
-        "id": "03af03c9-3a93-4c18-a45c-889fd86e98cc"
-      },
-      "source": [
-        "## Erp"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "fb4ab32d-4368-4e3d-903f-653ccc340ef7",
-      "metadata": {
-        "id": "fb4ab32d-4368-4e3d-903f-653ccc340ef7"
-      },
-      "outputs": [],
-      "source": [
-        "erp = Erpsearcher(verbose=True)\n",
-        "df = erp.fetch_model_data()\n",
-        "df.head(1)"
-      ]
-    }
-  ],
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.10.14"
-    },
-    "toc": {
-      "base_numbering": 1,
-      "nav_menu": {},
-      "number_sections": true,
-      "sideBar": true,
-      "skip_h1_title": false,
-      "title_cell": "Table of Contents",
-      "title_sidebar": "Contents",
-      "toc_cell": false,
-      "toc_position": {},
-      "toc_section_display": true,
-      "toc_window_display": false
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "1f063cfb",
+   "metadata": {
+    "id": "1f063cfb"
+   },
+   "source": [
+    "QuickGuide for marketmodels\n",
+    "\n",
+    "[프로젝트 페이지: Research-on-the-TV-market](https://github.com/xikest/research-market-tv)"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 5
+  {
+   "cell_type": "markdown",
+   "id": "30216803",
+   "metadata": {
+    "id": "30216803"
+   },
+   "source": [
+    "# Env setting: Install Colab selenium & crome driver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a25efe6b-4cbe-49d6-83be-f55507d47a90",
+   "metadata": {
+    "id": "a25efe6b-4cbe-49d6-83be-f55507d47a90"
+   },
+   "outputs": [],
+   "source": [
+    "!pip install -U openpyxl tqdm --q\n",
+    "!pip install -U requests selenium beautifulsoup4 --q\n",
+    "!pip install -U matplotlib seaborn --q\n",
+    "!pip install -U xik_tools mkt-retv --q"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e1cbb67",
+   "metadata": {
+    "id": "6e1cbb67"
+   },
+   "source": [
+    "# Import Package"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e611f88",
+   "metadata": {
+    "id": "8e611f88"
+   },
+   "outputs": [],
+   "source": [
+    "from market_research.scraper import Erpsearcher\n",
+    "from tools.file import GitMgt\n",
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e37db89-b7bf-4c61-8e74-6d5aa412001a",
+   "metadata": {
+    "id": "8e37db89-b7bf-4c61-8e74-6d5aa412001a"
+   },
+   "source": [
+    "# 실행"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03af03c9-3a93-4c18-a45c-889fd86e98cc",
+   "metadata": {
+    "id": "03af03c9-3a93-4c18-a45c-889fd86e98cc"
+   },
+   "source": [
+    "## Erp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb4ab32d-4368-4e3d-903f-653ccc340ef7",
+   "metadata": {
+    "id": "fb4ab32d-4368-4e3d-903f-653ccc340ef7"
+   },
+   "outputs": [],
+   "source": [
+    "erp = Erpsearcher()\n",
+    "df = erp.fetch_model_data()\n",
+    "df.head(1)"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.14"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
 }
