--- a/quickguide_market_erp.ipynb
+++ b/quickguide_market_erp.ipynb
@@ -72,6 +72,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a65e8edb-eda6-4ad5-bdf6-0d6a99013274",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "git_token = None\n",
+    "git_repo = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70ca4fef-d8a7-42f6-b4e1-f9eb4b27ebb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "owner = None\n",
+    "repo = None\n",
+    "folder_path = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89b1a8ad-f11a-4cdc-9380-7556d35cfd41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "today = datetime.now().strftime(\"%y%m%d\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "03af03c9-3a93-4c18-a45c-889fd86e98cc",
    "metadata": {
@@ -93,6 +126,40 @@
     "erp = Erpsearcher()\n",
     "df = erp.fetch_model_data()\n",
     "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0a3cdb7-026f-42a0-a490-da70db00182a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    df = erp.fetch_model_data()\n",
+    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"json/model_erp_data_{today}\" )\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e376921-2f5b-4b0e-bfc3-069feb6a0939",
+   "metadata": {},
+   "source": [
+    "# colab에서 파일 받기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa0d49f9-e1ef-41b5-afab-92f8d0912f84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import files\n",
+    "!zip -r /content/results.zip /content/results\n",
+    "files.download('/content/results.zip')"
    ]
   }
  ],
