--- a/quickguide_market_erp.ipynb
+++ b/quickguide_market_erp.ipynb
@@ -136,8 +136,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    df = erp.fetch_model_data()\n",
-    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"json/model_erp_data_{today}\" )\n",
+    "    GitMgt.upload_json_to_github(df,  git_token, git_repo, file_name=f\"json/erp_data_{today}\" )\n",
     "except Exception as e:\n",
     "    print(e)"
    ]
