--- a/quickguide_market_models.ipynb
+++ b/quickguide_market_models.ipynb
@@ -34,7 +34,8 @@
     "!pip install -U openpyxl tqdm --q\n",
     "!pip install -U requests selenium beautifulsoup4 --q\n",
     "!pip install -U matplotlib seaborn --q\n",
-    "!pip install -U xik_tools mkt-retv --q"
+    "!pip install -U xik_tools mkt-retv --q\n",
+    "!pip install playwright --q"
    ]
   },
   {
@@ -63,7 +64,9 @@
     "from market_research.scraper import Specscraper_t\n",
     "from market_research.scraper import DataVisualizer\n",
     "from tools.file import GitMgt\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "import logging\n",
+    "import asyncio"
    ]
   },
   {
@@ -282,8 +285,8 @@
    },
    "outputs": [],
    "source": [
-    "scraper_se = Specscraper_se()\n",
-    "df = scraper_se.fetch_model_data()\n",
+    "scraper_se = Specscraper_se(verbose=True)\n",
+    "df = await scraper_se.fetch_model_data()\n",
     "df.head(1)"
    ]
   },
